# build-rag

./: .gitignore  .mcp.json  README.md  plan.md  pyproject.toml
.codex/: config.toml
.cursor/: mcp.json
src/: __init__.py  batch_retrieval_evaluation.py  config.py  data_loader.py  evaluation.py  generation.py  hotpotqa_loader.py  ingestion.py  langfuse_tracing.py  observability.py  rag.py  retrieval.py  stage1_data.py  stage2_ingestion.py  stage3_retrieval.py  stage4_rag.py  stage5_evaluate_retrieval.py
src/data_sources/: __init__.py  huggingface.py
src/hotpotqa/: __init__.py  normalization.py  types.py
tests/: test_batch_retrieval_evaluation.py  test_data_loader.py  test_evaluation.py  test_generation.py  test_ingestion.py  test_langfuse_tracing.py  test_rag.py  test_retrieval.py
tests/fixtures/: sample_stratrag.jsonl
