[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-rag"
version = "0.1.0"
description = "A phased Haystack StratRAG retrieval and RAG evaluation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "haystack-ai>=2,<3",
  "datasets>=2.19",
  "sentence-transformers>=3.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
